# secure-development

./: .dockerignore  .env.example  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  README.md  compose.yaml  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  seccomp-profile.json
.github/workflows/: ci-p11-dast.yml  ci-p12-iac-container.yml  ci-sast-secrets.yml  ci-sbom-sca.yml  ci.yml
.zap/: rules.tsv
EVIDENCE/P12/: hardening_summary.md
alembic/: env.py
alembic/versions/: 613f67aab144_add_feature_table.py
app/: main.py
app/api/middleware/: __init__.py  correlation_id.py  error_handler.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: __init__.py  feature.py
app/core/: exceptions.py  settings.py
app/db/: session.py
app/models/: __init__.py  feature.py
app/repositories/: __init__.py  base.py  feature.py
app/schemas/: __init__.py  error.py  feature.py
docs/adr/: ADR-001-rfc7807-error-handling.md  ADR-002-http-client-policies.md  ADR-003-secrets-management.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: DFD.md  RISKS.md  STRIDE.md
iac/: configmap.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  secret.yaml  service.yaml  serviceaccount.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint.yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: test_feature.py
