[tool.ruff]
line-length = 100
lint.select = ["E","F","W","I"]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secdev-course-app"
version = "0.1.0"
description = "SecDev Course Application"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "alembic>=1.13.3",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=6.0.0",
    "pytest-html>=4.1.1",
    "httpx>=0.27.2",
    "ruff>=0.6.9",
    "black>=24.8.0",
]
